📱 💥  MAJOR CHANGES - fixed footer not showing issue - colors & fonts - layout fixing

--- a/style/contact-us.css
+++ b/style/contact-us.css
@@ -1,80 +1,88 @@
-*{
+:root {
+    --accent-color: #62b800;
+    --orange: #FE5904;
+    --deep-blue: #005EA4;
+}
+
+* {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Geologica', sans-serif;
 }
 
-.contact-us{
-    margin: auto;
-    padding-top: 150px;
-    position: absolute;
+*::selection {
+    color: white;
+    background-color: var(--orange);
 }
 
-.contact-us-row{
+.contact-us {
+    margin: auto;
+    padding: 20px;
+    padding-top: 150px;
+}
+
+h1 {
+    font-size: 32px;
+}
+
+.contact-us-row {
     display: flex;
     justify-content: space-between;
-}
-.contact-column1{
-    flex-basis: 73%;
-    border-radius: 20px;
-    margin-bottom: 5%;
-    padding: 20px 20px;
-}
-.contact-column2{
-    flex-basis: 50%;
-    border-radius: 20px;
-    margin-bottom: 5%;
-    padding: 20px 20px;
-}
-.contact-column1 h3{
-    flex-basis: 50%;
-    font-size: 50px;
-    font-weight: 600;
-    margin: 20px;
+    flex-direction: column;
 }
 
-.contact-column1 p{
-    padding: 20px;
+.form-table {
+    width: 100%;
+}
+
+.contact-column1 p {
     margin-top: 2px;
 }
 
-.contact-column1 ul li{
+.contact-column1 ul li {
     list-style: none;
-    padding-left: 20px;
     margin: 15px 0px;
 }
-.contact-column1 ul li a{
+
+.contact-column1 ul li a {
     text-decoration: none;
     color: black;
-    
 }
 
-.contact-column2 label{
-    display: flex;
-    font-size: 20px;
+.contact-column2 label {
     margin-top: 20px;
 }
-.contact-column2 #text{
-    width: 500px;
+
+.contact-column2 #text {
+    width: 100%;
     height: 30px;
     cursor: text;
     border: 1px solid rgb(173, 173, 173);
 }
-.contact-column2 #message{
-    width: 500px;
-    border: 1px solid rgb(133, 132, 132);
+
+.contact-column2 #message {
+    width: 100%;
+    resize: none;
+    border: 1px solid rgb(173, 173, 173);
 }
-.contact-column2 #btn{
-    padding: 20px;
+
+.contact-column2 #btn {
+    padding: 6px 12px;
     size: 15px;
     font-weight: 600;
     color: white;
-    border-color: rgba(0, 132, 255, 0.884);
-    background-color: rgba(0, 174, 255, 0.829);
+    background-color: var(--orange);
+    border: solid 2px var(--orange);
 }
 
+.contact-column2 #btn:hover {
+    background-color: white;
+    color: var(--orange);
+}
 
-
-
-
-
+/* make the borders to be orange when focused */
+textarea:focus, input:focus {
+    outline: var(--orange) !important;
+    border-color: var(--orange) !important;
+}
